--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="./application.html" class="nav-link">Tìm hiểu</a>
                     </li>
                     <li class="nav-item">
-                        <a href="./origin.html" class="nav-link">Nhận xét và kết luận</a>
+                        <a href="./origin.html" class="nav-link"></a>
                     </li>
                     <li class="nav-item">
                         <a href="./history.html" class="nav-link">History</a>
@@ -83,23 +83,6 @@
 		    Đó là cách làm Google đã thực hiện trong năm 2012. <br>
 		    <img src="./Graph.png" width="480" height="268"> <br>
                  </p>
-	<h4 id="network"> 3. Semantic Network </h4>
-                <p>
-                    Đây nghĩa là mạng ngữ nghĩa, hoặc là mạng khung, là một nền tảng kiến thức 
-		    mà đại diện ngữ nghĩa mối quan hệ giữa các khái niệm trong một mạng. Điều này 
-		    thường được sử dụng như một hình thức đại diện kiến thức . Đó là một đạo diễn hay 
-		    vô hướng đồ thị gồm các đỉnh , đại diện cho các khái niệm , và các cạnh , trong 
-		    đó đại diện cho quan hệ ngữ nghĩa giữa các khái niệm,lập bản đồ hoặc kết nối các 
-		    lĩnh vực ngữ nghĩa. Các mạng ngữ nghĩa được tiêu chuẩn hóa điển hình được thể hiện 
-		    dưới dạng ba lần ngữ nghĩa.  <br>
-		    <img src="./network.png" width="480" height="268"> <br>
-		    Bộ ba ngữ nghĩa , hay đơn giản là bộ ba , là thực thể dữ liệu nguyên tử trong mô hình dữ liệu Khung mô 
-		    tả tài nguyên (RDF). Như tên gọi của nó, bộ ba là một tập hợp gồm ba thực thể mã hóa viết về dữ liệu ngữ 
-		    nghĩa dưới dạng chủ đề biểu thức dự đoán đối tượng mật (ví dụ: "Bob là 35" hoặc "Bob biết John").Định dạng này cho phép kiến 
-		    thức được trình bày theo cách dễ đọc bằng máy.Đặc biệt,mọi phần của bộ ba RDF đều có thể định địa chỉ thông qua các URI duy nhất. <br><br>
-		    <img src="./network2.jpg" width="480" height="268" > <br><br>
-                 </p>
-
 
 
     <footer>
