--- a/origin.html
+++ b/origin.html
@@ -68,18 +68,19 @@
                     <img src="res/img/ungdung.jpg" width="640" height="350">
                 </p>
 	<h4 id="nhxet"> 1. Nhận xét </h4>
-                <p>
-                    Google đã và đang hướng tới mục tiêu mà họ đề ra với Google Search, đó là 
-		"Things, not strings". Họ đã mở ra một thế hệ mới cho công cụ tìm kiếm, tiên phong đi đầu với 
-		những mạo hiểm thách thức, dù chưa biết đích đến như thế nào nhưng Google đã thành công với ý 
-		tưởng của mình. <br>
+                <p>Đây là một đề tài thú vị, hấp dẫn. Sau khi hoàn thành bài tập lớn với đề tài này, 
+			chúng em đã được mở mang kiến thức, tiếp cận thông tin chuyên ngành mới lạ, hấp dẫn.
+                     <br>
 		    <img src="./things.jpg" width="480" height="268"> <br>
                  </p>
 	<h4 id="ketluan"> 2. Kết luận </h4>
                 <p>
-                    Dù ý tưởng về Knowledge Graph không phải do Google nghĩ ra nhưng chính họ lại là 
-		    người đầu tiên áp dụng chúng vào công cụ tìm kiếm. Và điều đó giúp họ nâng tầm Google Search, 
-		    đúng với những gì họ mong chờ về Google Search: "Things, not strings". <br>
+                    Google đã và đang hướng tới mục tiêu mà họ đề ra với Google Search, đó là "Things, not strings". 
+			Họ đã mở ra một thế hệ mới cho công cụ tìm kiếm, tiên phong đi đầu với những mạo hiểm thách thức,
+			dù chưa biết đích đến như thế nào nhưng Google đã thành công với ý tưởng của mình.<br>
+			Dù ý tưởng về Knowledge Graph không phải do Google nghĩ ra nhưng chính họ lại là người đầu tiên 
+			áp dụng chúng vào công cụ tìm kiếm. Và điều đó giúp họ nâng tầm Google Search, đúng với những 
+			gì họ mong chờ về Google Search: "Things, not strings". <br>
 		    <img src="./Graph.png" width="480" height="268"> <br>
                  </p>
 
