--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="./application.html" class="nav-link">Tìm hiểu</a>
                     </li>
                     <li class="nav-item">
-                        <a href="./origin.html" class="nav-link"></a>
+                        <a href="./origin.html" class="nav-link">Nhận xét và kết </a>
                     </li>
                     <li class="nav-item">
                         <a href="./history.html" class="nav-link">History</a>
