--- a/about.html
+++ b/about.html
@@ -60,9 +60,10 @@
                         <h1>Tài liệu tham khảo</h1>
                     </span>
                     <p>
-                        https://www.contentkingapp.com/blog/knowledge-graph/<br>
-                        https://www.blog.google/products/search/introducing-knowledge-graph-things-not/<br>
-                        https://www.wikipedia.org/
+                        <a href="https://www.contentkingapp.com/blog/knowledge-graph/">https://www.contentkingapp.com/blog/knowledge-graph/</a>
+                        <a href="https://www.blog.google/products/search/introducing-knowledge-graph-things-not/">https://www.blog.google/products/search/introducing-knowledge-graph-things-not/</a>
+                       <a href="https://www.wikipedia.org/">https:/https://www.wikipedia.org/</a>
+                      
 
                     </p>
                     <hr>
