--- a/origin.html
+++ b/origin.html
@@ -57,7 +57,7 @@
 
             <div class="col-lg-12">
                 <span style="color: red">
-                    <h1 >MỘT SỐ KHÁI NIỆM</h1>
+                    <h1 >Nhận xét và kết luận</h1>
                 </span>
                 <hr>
 
@@ -65,7 +65,7 @@
                 <p>
                     <a href="#nhxet"> Nhận xét</a> <br>
                     <a href="#ketluan"> Kết luận</a><br>
-                    <img src="res/img/ungdung.jpg" width="640" height="350">
+                    <img src="./nhanxet.jpg" width="640" height="350">
                 </p>
 	<h4 id="nhxet"> 1. Nhận xét </h4>
                 <p>Đây là một đề tài thú vị, hấp dẫn. Sau khi hoàn thành bài tập lớn với đề tài này, 
@@ -81,7 +81,8 @@
 			Dù ý tưởng về Knowledge Graph không phải do Google nghĩ ra nhưng chính họ lại là người đầu tiên 
 			áp dụng chúng vào công cụ tìm kiếm. Và điều đó giúp họ nâng tầm Google Search, đúng với những 
 			gì họ mong chờ về Google Search: "Things, not strings". <br>
-		    <img src="./Graph.png" width="480" height="268"> <br>
+		    <img src="./Graph.png" width="480" height="268"> 
+		    <img src="./google5.png" width="480" height="268"> 
                  </p>
 
     <footer>
