--- a/origin.html
+++ b/origin.html
@@ -89,7 +89,7 @@
     <div class="container-fluid padding">
         <div class="row text-center">
             <div class="col-md-4">
-                 <img src="./A.jpg">
+                 <img src="./A.jpg"  width="50" height ="50">
                 <hr class="light">
                 <p>Vũ Quang Huy</p>
                 <p>Cao Thanh Lương</p>
