--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div class="container-fluid padding">
         <div class="row text-center">
             <div class="col-md-4">
-                <img src="./res/img/team5.jpg">
+                <img src="./A.jpg" width="50" height="50">
                 <hr class="light">
                 <p>Vũ Quang Huy</p>
                 <p>Cao Thanh Lương</p>
@@ -103,7 +103,8 @@
                 <h5>Bài tập lớn</h5>
                 <hr class="light">
                 <p>Môn: Nhập môn điện toán</p>
-                <p>Đề tài:“Things, not strings” </p>
+                <p>Nhóm: CSEBK </p>
+		<p>Đề tài:“Things, not strings” </p>
                 <p>Thời gian tạo: 12/2019</p>
             </div>
             <div class="col-md-4">
