--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
                         <div class="container-fluid padding">
                             <div class="row text-center">
                                 <div class="col-md-4">
-                                    <img src="./res/img/team5.jpg">
+                                    <img src="./A.jpg">
                                     <hr class="light">
                                     <p>Vũ Quang Huy</p>
                                     <p>Cao Thanh Lương</p>
@@ -88,6 +88,7 @@
                                     <h5>Bài tập lớn</h5>
                                     <hr class="light">
                                     <p>Môn: Nhập môn điện toán</p>
+                                    <p> Nhóm: CSEBK</p>
                                     <p>Đề tài:“Things, not strings” </p>
                                     <p>Thời gian tạo: 12/2019</p>
                                 </div>
