--- a/about.html
+++ b/about.html
@@ -60,9 +60,9 @@
                         <h1>Tài liệu tham khảo</h1>
                     </span>
                     <p>
-                        <a href="https://www.contentkingapp.com/blog/knowledge-graph/">https://www.contentkingapp.com/blog/knowledge-graph/</a>
-                        <a href="https://www.blog.google/products/search/introducing-knowledge-graph-things-not/">https://www.blog.google/products/search/introducing-knowledge-graph-things-not/</a>
-                       <a href="https://www.wikipedia.org/">https:/https://www.wikipedia.org/</a>
+                        <a href="https://www.contentkingapp.com/blog/knowledge-graph/">https://www.contentkingapp.com/blog/knowledge-graph/</a> <br>
+                        <a href="https://www.blog.google/products/search/introducing-knowledge-graph-things-not/">https://www.blog.google/products/search/introducing-knowledge-graph-things-not/</a><br>
+                       <a href="https://www.wikipedia.org/">https:/https://www.wikipedia.org/</a><br>
                       
 
                     </p>
