--- a/index.html
+++ b/index.html
@@ -27,16 +27,9 @@
                     </li>
                     <li class="nav-item">
                         <a href="./origin.html" class="nav-link">Nhận xét và kết </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./history.html" class="nav-link">History</a>
-                    </li>
-                    
-                    <li class="nav-item">
-                        <a href="./future.html"class="nav-link">Future</a>
-                    </li>
+			</li>
                     <li>
-                        <a href="./about.html" class="nav-link">About</a>
+                        <a href="./about.html" class="nav-link">Tài liệu tham khảo</a>
                     </li>
                 </ul>
             </div>
