--- a/origin.html
+++ b/origin.html
@@ -28,16 +28,9 @@
                     <li class="nav-item">
                         
 			<a class="nav-link active">Nhận xét và kết luận</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="./history.html" class="nav-link">History</a>
-                    </li>
-                    
-                    <li class="nav-item">
-                        <a href="./future.html"class="nav-link">Future</a>
-                    </li>
+			</li>
                     <li>
-                        <a href="./about.html" class="nav-link">About</a>
+                        <a href="./about.html" class="nav-link">Tài liệu tham khảo</a>
                     </li>
                 </ul>
             </div>
